--- a/accounting.html
+++ b/accounting.html
@@ -15,7 +15,7 @@
                <nav>
                 <ul>
                     <li><a href="./index.html">home</a></li>
-                    <li><a href="./accounting.html">about</a></li>
+                    <li><a href="./accounting.html">accounting</a></li>
                 </ul>
                </nav>
             </div>
