--- a/accounting.html
+++ b/accounting.html
@@ -22,11 +22,15 @@
     </div>
     </header>
     <main>
+        <section>
+           <div id="employees_table"></div> 
 
+        </section>
     </main>
     <footer>
         <p>&copy; copyright 2023 learn html</p>
     </footer>
+    <script src="./accounting.js"></script>
     
 </body>
 </html>
