--- a/accounting.html
+++ b/accounting.html
@@ -28,7 +28,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; copyright 2023 learn html</p>
+        <p>&copy; copyright 2023 HR-management-system</p>
     </footer>
     <script src="./accounting.js"></script>
     
