--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     </main>
     <footer>
-        <p>&copy; copyright 2023 learn html</p>
+        <p>&copy; copyright 2023 HR-management-system </p>
     </footer>
     <script src="./app.js"></script>
 </body>
